# python-sdlc

./: README.md  pyproject.toml
src/py_sdlc/: __init__.py
src/python_sdlc/: __init__.py
