[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-sdlc"
version = "0.0.1"
description = "Python SDLC toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "benkt" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/benkt/py-sdlc"
