[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-sdlc"
version = "0.0.2"
description = "Python SDLC toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "ben-thomp" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/ben-thomp/python-sdlc"